# IMAC_1-2_PA_TDs

./: README.md
TD01/: .gitignore  CMakeLists.txt
TD01/src/: fraction.cpp  fraction.hpp  main.cpp  utils.cpp  utils.hpp
TD02/: CMakeLists.txt
TD02/src/: ScopedTimer.hpp  ex01.cpp  ex02.cpp  ex03.cpp  ex04.cpp
TD03/src/: ex01.cpp  ex02.cpp  ex03.cpp
TD04/: CMakeLists.txt
TD04/src/: ex01.cpp  ex02.cpp  ex03.cpp
TD05/: CMakeLists.txt
TD05/src/: ex01.cpp  ex02.cpp  ex03.cpp
TD06/: CMakeLists.txt
TD06/src/: ex03.cpp  main.cpp  node.cpp  node.hpp  notes.txt
TD07/: CMakeLists.txt
TD07/src/: EX 3 - Q1.txt  graph.cpp  graph.hpp  main.cpp  node.hpp
